# WonderfulMatrices

./: README.md  README_zh.md  eval.py  notebook.ipynb  pyproject.toml  register_model.py  setup.py  train.py
examples/: notebook.ipynb  notebook_zh.ipynb
examples/evaluate/: README.md  eval_downstream_tasks.ps1  eval_downstream_tasks.sh
examples/evaluation/: README.md  eval_downstream_tasks.ps1  eval_downstream_tasks.sh
examples/finetune/: README.md
examples/finetune/configs/: Doge-160M-Instruct.yaml  Doge-160M.yaml  Doge-197M.yaml  Doge-20M-Instruct-DPO.yaml  Doge-20M-Instruct.yaml  Doge-20M.yaml  Doge-22M.yaml  Doge-320M-Instruct.yaml  Doge-320M.yaml  Doge-400M.yaml  Doge-60M-Instruct.yaml  Doge-60M.yaml  Doge-77M.yaml  README.md  doge_1.2B.yaml  doge_197M.yaml  doge_2.8B.yaml  doge_22M.yaml  doge_400M.yaml  doge_76M.yaml  doge_77M.yaml
examples/finetune/docs/: README.md
examples/finetune/scripts/: download_datasets.py  dpo.py  preprocess_datasets.py  sft.py
examples/finetuning/: README.md
examples/finetuning/configs/: Doge-160M-Instruct-DPO.yaml  Doge-160M-Instruct-SFT.yaml  Doge-20M-Instruct-DPO.yaml  Doge-20M-Instruct-SFT.yaml  Doge-320M-Instruct-DPO.yaml  Doge-320M-Instruct-SFT.yaml  Doge-60M-Instruct-DPO.yaml  Doge-60M-Instruct-SFT.yaml
examples/finetuning/scripts/: dpo.py  preprocess_datasets.py  sft.py
examples/pretrain/: README.md
examples/pretrain/configs/: Doge-1.2B.yaml  Doge-10M.yaml  Doge-160M.yaml  Doge-197M.yaml  Doge-2.8B.yaml  Doge-20M.yaml  Doge-22M.yaml  Doge-25M.yaml  Doge-320M.yaml  Doge-360M.yaml  Doge-400M.yaml  Doge-60M.yaml  Doge-77M.yaml  Doge-MoE-120M.yaml  Doge-MoE-20M.yaml  Doge-MoE-220M.yaml  Doge-MoE-230M.yaml  Doge-MoE-240M.yaml  Doge-MoE-380M.yaml  Doge-MoE-500M.yaml  Doge-MoE-540M.yaml  Doge-MoE-80M.yaml  Doge-MoE-880M.yaml  README.md  doge_1.2B.yaml  doge_197M.yaml  doge_2.8B.yaml  doge_22M.yaml  doge_400M.yaml  doge_76M.yaml  doge_77M.yaml
examples/pretrain/docs/: README_Doge-20M.md  (+1 more)
examples/pretraining/: README.md
examples/tokenizer/: tokenizer.json  tokenizer_config.json  tokenizer_config_old.json
model/config/: README.md  README_22M.md  doge_1.2B.yaml  doge_1.3B.yaml  doge_100M.yaml  doge_180M.yaml  doge_195M.yaml  doge_2.8B.yaml  doge_200M.yaml  doge_22M.yaml  doge_250M.yaml  doge_25M.yaml  doge_28M.yaml  doge_3.2B.yaml  doge_400M.yaml  doge_420M.yaml  doge_450M.yaml  doge_600M.yaml  doge_75M.yaml  doge_76M.yaml  doge_80M.yaml
model/doge/: __init__.py  configuration_doge.py  configuration_doge_vision.py  modeing_doge_vision.py  modeling_doge.py
model/modules/: cdmoe.py  innerfuncattn.py
models/doge/: configuration_doge.py  modeling_doge.py
scripts/: concatenate_datasets.py  download_datasets.py  eval_downstream_tasks.ps1  eval_downstream_tasks.sh  preprocess_datasets.py  register_model.py
src/wonderful_matrices/: __init__.py
src/wonderful_matrices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+42 files in other folders)
